# priv-kit

./: .gitattributes  .gitignore  AGENTS.md  README-zh.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  publish.yml  website.yml
docs/: README.md  architecture.md  modules.md  project-constitution.md  third-party-notices.md
gradle/: libs.versions.toml
hidden-api/: build.gradle.kts
priv-adb/: README.md  build.gradle.kts
priv-adb-crypto/: build.gradle.kts
priv-adb/src/main/cpp/: CMakeLists.txt  privilege_adb_logging.h  privilege_adb_pairing.cpp  privilege_adb_starter.cpp
priv-bc/: build.gradle.kts
priv-binder/: README.md  build.gradle.kts
priv-core/: README.md  build.gradle.kts
priv-core/src/main/: AndroidManifest.xml
priv-core/src/main/cpp/: CMakeLists.txt  priv_kit_starter.cpp
priv-delegate/: README.md  build.gradle.kts
priv-root/: README.md  build.gradle.kts
priv-runtime/: README.md  build.gradle.kts  consumer-rules.pro
priv-sample/: README.md  build.gradle.kts
priv-server/: README.md  build.gradle.kts  consumer-rules.pro
priv-shared/: README.md  build.gradle.kts
priv-ssl/: build.gradle.kts
priv-ui/: README.md  build.gradle.kts
priv-user-service/: README.md  build.gradle.kts  consumer-rules.pro
website/: index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
website/.vitepress/: config.ts
website/guide/: activation.md  binder.md  getting-started.md  priv-ui.md  user-service.md
website/scripts/: check-docs.ts
website/zh/: index.md
(+653 files in other folders)
